[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/enemyships/Spaceship_04_BLUE.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/Enemy2.gd" type="Script" id=3]

[node name="Enemy2" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="Area2D" index="0"]
polygon = PoolVector2Array( -17.625, -27.125, -30.125, 7.5, -23.875, 14.75, -11.6812, -0.112438, -6.875, 29.25, 6.625, 29.5, 12.0952, -0.465992, 23.75, 14.375, 31.125, 7.125, 17.5, -27.375 )

[node name="Particles2D" parent="." index="2"]
modulate = Color( 1, 1, 1, 0.494118 )

[node name="LeftShooter" type="Position2D" parent="." index="3"]
position = Vector2( -9, 2 )

[node name="RightShooter" type="Position2D" parent="." index="4"]
position = Vector2( 9, 2 )

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
